<resources>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">海龟之家</string>
    <string name="about">关于</string>
    <string name="about_api">相关API</string>
    <string name="add">加入列表</string>
    <string name="add_list">加入列表(%s)</string>
    <string name="artist">艺术家：</string>
    <string name="album">专辑：</string>
    <string name="artist_info">歌手信息</string>
    <string name="artist_info_name">姓名：%s</string>
    <string name="artist_info_country">国籍：%s</string>
    <string name="artist_info_constellation">星座：%s</string>
    <string name="artist_info_stature">身高：%scm</string>
    <string name="artist_info_weight">体重：%skg</string>
    <string name="artist_info_birth">生日：%s</string>
    <string name="artist_info_intro">简介：%s</string>
    <string name="artist_info_empty">暂无歌手信息</string>
    <string name="btn_tips">提示一下</string>
    <string name="btn_command">关键指令</string>
    <string name="btn_history">输入历史</string>
    <string name="btn_input_command">输入指令</string>
    <string name="btn_reset_page">重置画布</string>
    <string name="hint_area">*** 辅助区域 ***</string>
    <string name="baidu_music_interface">百度音乐接口</string>
    <string name="baidu_bang">百度榜单</string>
    <string name="baidu_bang_no_des">榜单暂无介绍</string>
    <string name="cancel">取消</string>
    <string name="class_data_null">课程列表为空，无法添加！</string>
    <string name="class_title">课程大纲</string>
    <string name="class_square">项目广场</string>
    <string name="class_my_pro">我的项目</string>
    <string name="class_my_temp">草 稿 箱</string>
    <string name="class_mission">第%s章节</string>
    <string name="change_list">替换歌曲列表</string>
    <string name="change_local">切换本地曲库</string>
    <string name="check_update">检查更新</string>
    <string name="class_pre">上一节</string>
    <string name="class_next">下一节</string>
    <string name="clean">清空</string>
    <string name="cur_music_list">当前列表已经是：%s</string>
    <string name="collect_music">我的收藏</string>
    <string name="collect_null">获取收藏音乐为空！</string>
    <string name="collect_not_finish">收藏列表已支持添加到歌单\n在线列表的添加到歌单功能还在开发中…</string>
    <string name="collect_fail_null">获取歌曲信息报错，收藏失败！失败原因 0x00012: song is null！</string>
    <string name="change_list_success">替换播放列表成功！</string>
    <string name="confirm_change_list">当前列表的音乐即将替换播放列表，\n是否继续？</string>
    <string name="confirm_change_list_title">《%s》的音乐将会替换播放列表，\n是否继续？</string>
    <string name="confirm_clear_list">是否清空当前播放列表？</string>
    <string name="confirm_local_data_list">是否将课程离线缓存至本地？</string>
    <string name="confirm_tip_screen">在横屏状态下更匹配屏幕且动画效果更直观，强烈建议【切换横屏】！\n您也可以通过右上角进行【横/竖屏切换】</string>
    <string name="keep_shu">保存竖屏,不再提示</string>
    <string name="advice_heng">横屏展示建议</string>
    <string name="change_heng">切换横屏</string>
    <string name="confirm_change_local_music_list">是否切换到本地曲库？</string>
    <string name="clear_list_success">播放列表已清空！</string>
    <string name="confirm_logoff">是否注销登录？</string>
    <string name="confirm_just_save">确定暂存数据？若之前有暂存过数据，将会被覆盖哦！</string>
    <string name="confirm_return_just_save">发现暂存数据，是否载入？</string>
    <string name="confirm_change">是否跳转%s一章节？</string>
    <string name="confirm_feek_back">是否提交反馈(意见)？</string>
    <string name="code_wrong">验证码错误！看不清请点击验证码重新获取！</string>
    <string name="copyright">Copyright © 2016&#045;%d CSU</string>
    <string name="just_save">暂存</string>
    <string name="just_save_again">载入</string>
    <string name="delete">删除</string>
    <string name="delete_music">删除%s？</string>
    <string name="delete_from_list">已从列表中删除！</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="download_success">%s下载完成</string>
    <string name="download_data_success">数据离线下载完成！</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="file_name">文件名称：</string>
    <string name="file_size">文件大小：</string>
    <string name="file_path">文件路径：</string>
    <string name="get_music_data_size">由于数据接口对接《百度歌曲接口API》，实际导入播放列表的歌曲数为：%s</string>
    <string name="get_music_date">获取音乐数据中……</string>
    <string name="get_fail_with_res">请求失败，请检查网络后重试。参考原因：%s</string>
    <string name="get_fail">请求失败，请检查网络后重试。</string>
    <string name="has_logoff">已注销！</string>
    <string name="hot_music">百度热歌榜</string>
    <string name="hot_description">该榜单是根据百度音乐平台歌曲每周播放量自动生成的数据榜单，统计范围为百度音乐平台上的全部歌曲，每日更新一次</string>
    <string name="input_name">邮箱或用户名不能为空！</string>
    <string name="input_password">密码不能为空！</string>
    <string name="input_feek_back">请填写您的宝贵意见……</string>
    <string name="input_password_again">请再次输入密码！</string>
    <string name="password_not_mate">两次输入密码不一致！</string>
    <string name="iknow">知道了</string>
    <string name="input_codes">验证码不能为空！</string>
    <string name="input_contact">请填写您的联系方式(QQ或邮箱)[选填]</string>
    <string name="input_advice">请填写您的宝贵意见!</string>
    <string name="input_pass">输入密码</string>
    <string name="input_pass_again">再次输入密码</string>
    <string name="input_code">输入验证码</string>
    <string name="jump">跳转</string>
    <string name="login_success">登录成功！</string>
    <string name="local_music">本地曲库</string>
    <string name="registering">注册中……</string>
    <string name="logining">登录中……</string>
    <string name="loading">拼命加载中……</string>
    <string name="initing">请稍候，初始化中……</string>
    <string name="uploading">请稍候，项目上传中……</string>
    <string name="pic_uploading">上传图片中……</string>
    <string name="loading_list">离线缓存中……</string>
    <string name="loading_more">加载更多……</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="input_command">请先输入指令.</string>
    <string name="left_in">向左缩起</string>
    <string name="right_in">向右缩起</string>
    <string name="login">登录</string>
    <string name="logoff">注销</string>
    <string name="local">本地</string>
    <string name="local_data">离线缓存</string>
    <string name="local_music_list">无本地歌曲！</string>
    <string name="last_update">最近更新：</string>
    <string name="list_is_local">当前播放列表为本地歌曲！</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="menu_search">在线搜索</string>
    <string name="menu_setting">设置</string>
    <string name="menu_share">分享海龟之家</string>
    <string name="menu_about">关于海龟之家</string>
    <string name="menu_feek_back">建议与反馈</string>
    <string name="menu_night">白天/夜间</string>
    <string name="menu_timer">定时关闭</string>
    <string name="menu_exit">退出应用</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="music_list">播放列表</string>
    <string name="music">歌曲</string>
    <string name="most_list">主打榜单</string>
    <string name="need_goal">需完成目标：</string>
    <string name="need_goal_one">1、展开并阅读完本节的教学内容；</string>
    <string name="need_goal_two">2、查看提示或关键指令；</string>
    <string name="need_goal_three">3、输入指令并执行指令；</string>
    <string name="not_login">未登录</string>
    <string name="not_login_collect">您还未登录哦!\n登录后才能获取在线收藏的歌曲.</string>
    <string name="not_login_feek_back">您还未登录哦!\n请先登录再进行操作.</string>
    <string name="no_login_to_collect">登录后才能收藏歌曲哦！</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="no_collect_music">暂无收藏音乐</string>
    <string name="no_more_data">无更多数据</string>
    <string name="no_lrc">暂无歌词</string>
    <string name="no_music">无音乐</string>
    <string name="no_permission">没有%1$s权限，无法%2$s！</string>
    <string name="no_ring_permission">没有权限，无法设置铃声，请授予权限</string>
    <string name="now_version">当前版本</string>
    <string name="now_play">正在播放：%s</string>
    <string name="now_download">正在下载：%s</string>
    <string name="network">网络</string>
    <string name="online_music">在线音乐</string>
    <string name="order_play">执行指令</string>
    <string name="order_input">输入指令</string>
    <string name="o_inteduce">*** 项目简介 *** \n</string>
    <string name="o_tips">*** 提示 *** \n</string>
    <string name="o_command">*** 指令 *** \n</string>
    <string name="o_history">*** 输入历史 *** </string>
    <string name="o_area">*** 辅助区域 *** \n</string>
    <string name="offline_data_success">√  已离线缓存</string>
    <string name="offline_data">+ 离线缓存</string>
    <string name="offline_data_tips">注：缓存本地后，可以记录学习进度</string>
    <string name="has_offline_data">数据已缓存至本地了！</string>
    <string name="has_offline_data_miss">本地缓存数据已失效，请重新离线缓存！</string>
    <string name="offline_data_start">后台已开始缓存数据，请稍候片刻！^_^ </string>
    <string name="one_loading">1.加载中…</string>
    <string name="two_loading">2.加载中…</string>
    <string name="three_loading">3.加载中…</string>
    <string name="play_time_start">00:00</string>
    <string name="play_time">播放时长：</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="play">播放</string>
    <string name="press_exit">再按一次退出应用程序</string>
    <string name="register">注册</string>
    <string name="ring_permission_success">授权成功，请在再次操作以设置铃声</string>
    <string name="recent_update">最近更新：%s</string>
    <string name="refresh_code">点击刷新验证码</string>
    <string name="register_success">注册成功！</string>
    <string name="setting_update_time">排序方式：【时间】</string>
    <string name="setting_score">排序方式：【得分】</string>
    <string name="setting_view_count">排序方式：【浏览量】</string>
    <string name="setting_praise_count">排序方式：【点赞数】</string>
    <string name="sure">确定</string>
    <string name="spress">展开更多</string>
    <string name="study_step">学\n习\n进\n度</string>
    <string name="spress_no">收起</string>
    <string name="input_history">输入历史</string>
    <string name="clear_history">清除历史</string>
    <string name="study_had">已学习：</string>
    <string name="study_has">已学习</string>
    <string name="study_un">未学习</string>
    <string name="study_code">学习编程</string>
    <string name="study_code_tips">     《海龟之家》旨在让晦涩难懂的logo语言通过一些异常简单的、有趣的编程示例，一步一步的教你创建出奇妙而不可思议的图形。\n寓教于乐，让你在游戏中学会并走入编程世界。</string>
    <string name="size_goal">我们的目标</string>
    <string name="size_goal_tips">     在不久的将来，我们的工作和生活会有越来越多的要求具有基本的编程能力，因此，学习编程和喜欢编程就变得非常重要。\n     可视编程可以使得学习编程的成效更快，是最大程度将复杂的代码简单化、现实化的一种高效途径；\n     我们的目标就是用轻松有趣的可视编程的方法教会世界各地的孩子们学习编程的原理。</string>
    <string name="size_mb">MB</string>
    <string name="study_one">《一、教学内容·区》</string>
    <string name="study_two">《二、执行指令·区》</string>
    <string name="study_two_tips">提示：点击左上角按钮可展开查看内容教学区</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="search_tips">歌曲名、歌手名</string>
    <string name="search_empty">未找到相关结果</string>
    <string name="search_music">搜索音乐</string>
    <string name="searching_lrc">正在搜索歌词…</string>
    <string name="submit">提 交</string>
    <string name="setting_ringtone_success">设置铃声成功</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="sound_effect">音效调节</string>
    <string name="singer_album">歌手 - 专辑</string>
    <string name="share_app">Hello,TurtleEdu.  编程不再难，寓教于乐，分享成功。----这是海龟之家的主旨。%s：http://fir.im/turtleedu</string>
    <string name="thank_feek_back">感谢您的反馈(意见)，小编会立即核实处理</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="tips">温馨提示</string>
    <string name="tata_music">Tata 音乐</string>
    <string name="unknown">未知</string>
    <string name="user_null">获取用户信息为空！</string>
</resources>