<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="@string/study_code"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="start"
            android:text="@string/study_code_tips"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="start"
            android:text="@string/size_goal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="start"
            android:text="@string/size_goal_tips"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_main_teach_add"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/offline_data"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:background="@drawable/corner_blue_color_5dp"
                android:padding="5dp"
                android:gravity="end|center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_data_tips"
                android:textSize="13sp"
                android:textColor="@color/grey_0"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>